--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20260104195830">
+	<link rel="stylesheet" href="css/style.min.css?_v=20260104201915">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260104195830"></script> -->
-	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260104195830"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260104201915"></script> -->
+	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260104201915"></script> -->
 </head>
 
-<body style="display: none;">
+<body>
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__wrap">
@@ -618,7 +618,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20260104195830"></script>
+	<script src="js/app.min.js?_v=20260104201915"></script>
 	<div id="popup-violet" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
