--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20260104201915">
+	<link rel="stylesheet" href="css/style.min.css?_v=20260104220949">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260104201915"></script> -->
-	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260104201915"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260104220949"></script> -->
+	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260104220949"></script> -->
 </head>
 
-<body>
+<body style="display: none;">
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__wrap">
@@ -525,29 +525,54 @@
 												<div class="violet-works__wrapper swiper-wrapper">
 
 													<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/technoserviceport/" target="_blank">
-															<img src="img/technoservis.webp" alt="image">
+															<picture>
+																<source media="(min-width: 600px)" srcset="img/technoservis.webp">
+																<source media="(max-width: 600px)" srcset="img/technoservice-small.webp">
+																<img src="img/technoservis.webp" alt="image">
+															</picture>
+
 															<div class="works__label"><span>Многостраничник</span></div>
 														</a>
 													</div>
 													<div class="violet-works__slide swiper-slide">
 														<a href="https://denissaliukov.github.io/oknahaus/" target="_blank">
-															<img src="img/okna.webp" alt="image">
+															<picture>
+																<source media="(min-width: 600px)" srcset="img/okna.webp">
+																<source media="(max-width: 600px)" srcset="img/okna-small.webp">
+																<img src="img/okna.webp" alt="image">
+															</picture>
+
 															<div class="works__label"><span>Лэндинг</span></div>
 														</a>
 													</div>
 													<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/tehnowood/" target="_blank">
-															<img src="img/tehnowood.webp" alt="image">
+															<picture>
+																<source media="(min-width: 600px)" srcset="img/tehnowood.webp">
+																<source media="(max-width: 600px)" srcset="img/mebel-small.webp">
+																<img src="img/tehnowood.webp" alt="image">
+															</picture>
+
 															<div class="works__label"><span>Многостраничник</span></div>
 														</a>
 													</div>
 													<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/zlatmax/" target="_blank">
-															<img src="img/zlatmax.webp" alt="image">
+															<picture>
+																<source media="(min-width: 600px)" srcset="img/zlatmax.webp">
+																<source media="(max-width: 600px)" srcset="img/zlatmax-small.webp">
+																<img src="img/zlatmax.webp" alt="image">
+															</picture>
+
 															<div class="works__label"><span>Интернет-магазин</span>
 															</div>
 														</a>
 													</div>
 													<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/audiomaster/" target="_blank">
-															<img src="img/audiomaster.webp" alt="image">
+															<picture>
+																<source media="(min-width: 600px)" srcset="img/audiomaster.webp">
+																<source media="(max-width: 600px)" srcset="img/audio-small.webp">
+																<img src="img/audiomaster.webp" alt="image">
+															</picture>
+
 															<div class="works__label"><span>Интернет-магазин</span>
 															</div>
 														</a>
@@ -618,7 +643,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20260104201915"></script>
+	<script src="js/app.min.js?_v=20260104220949"></script>
 	<div id="popup-violet" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
