--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20260104220949">
+	<link rel="stylesheet" href="css/style.min.css?_v=20260109070849">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260104220949"></script> -->
-	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260104220949"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260109070849"></script> -->
+	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260109070849"></script> -->
 </head>
 
 <body style="display: none;">
@@ -42,13 +42,19 @@
 					<li class="elements__element elements__element--three">
 						<div class="elements__line"></div>
 						<div class="elements__block">
-							<button type="button" class="elements__btn"><span></span></button>
+							<button type="button" class="elements__btn elements__btn--cube">
+								<svg>
+									<use xlink:href="img/icons/icons.svg#mw"></use>
+								</svg>
+							</button>
 						</div>
 					</li>
 					<li class="elements__element elements__element--four">
 						<div class="elements__line"></div>
 						<div class="elements__block">
-							<button type="button" class="elements__btn"><span></span></button>
+							<button type="button" class="elements__btn"><svg>
+									<use xlink:href="img/icons/icons.svg#parallax"></use>
+								</svg></button>
 						</div>
 
 					</li>
@@ -158,6 +164,15 @@
 													<div class="skills-slide__text">Умение работать с системой контроля
 														версий
 														Git</div>
+												</div>
+
+											</div>
+											<div class="skills__slide swiper-slide skills-slide">
+												<div class="skills__content">
+													<div class="skills-slide__img">
+														<img src="img/adaptive.webp" alt="image">
+													</div>
+													<div class="skills-slide__text">Адаптивная вёрстка</div>
 												</div>
 
 											</div>
@@ -438,6 +453,15 @@
 													<div class="skills__slide swiper-slide skills-slide">
 														<div class="skills__content">
 															<div class="skills-slide__img">
+																<img src="img/multiplataforma-v.webp" alt="image">
+															</div>
+															<div class="skills-slide__text">Адаптивная вёрстка</div>
+														</div>
+
+													</div>
+													<div class="skills__slide swiper-slide skills-slide">
+														<div class="skills__content">
+															<div class="skills-slide__img">
 																<img src="img/gulp-v.webp" alt="image">
 															</div>
 															<div class="skills-slide__text">Использование таск-менеджера
@@ -632,6 +656,255 @@
 					</div>
 				</div>
 			</section>
+			<section class="section section--cube">
+
+				<div class="cube">
+
+					<div class="cube__content">
+						<ul class="cube__blocks">
+							<li class="cube__item">
+								<div class="cube__preview">
+									<h2 class="cube__title">Обо мне</h2>
+								</div>
+
+							</li>
+							<li class="cube__item">
+								<div class="cube__preview">
+									<h2 class="cube__title">Навыки</h2>
+								</div>
+							</li>
+							<li class="cube__item">
+								<div class="cube__preview">
+									<h2 class="cube__title">Работы</h2>
+								</div>
+							</li>
+							<li class="cube__item">
+								<div class="cube__preview">
+									<h2 class="cube__title">Контакты</h2>
+								</div>
+							</li>
+						</ul>
+
+						<ul class="cube__inner">
+							<li class="cube__inner-item">
+								<button type="button" class="cube__btn"><svg>
+										<use xlink:href="img/icons/icons.svg#left-arrow-cube"></use>
+									</svg><span>Назад</span></button>
+								<div class="cube__inner-content">
+									<h2>Врываюсь в IT слегка за
+										30</h2>
+									<span>
+										Приветствую.
+										Меня зовут Денис.
+										Я из города Норильск.
+										Мне 39 лет. В какой-то момент
+										открыл для себя
+										чудесный
+										мир веб-разработки, и решил
+										связать жизнь с этой профессией. Набиваю руку, готов учиться.
+										Занимаюсь
+										веб-разработкой
+										около двух лет. </span>
+									<span>Ответственный, пунктуальный, усидчивый, обучаемый, настырный,
+										склонен к
+										перфекционизму.</span>
+									<span>Созидание и творчество - моё всё.</span>
+								</div>
+
+							</li>
+							<li class="cube__inner-item">
+								<button type="button" class="cube__btn"><svg>
+										<use xlink:href="img/icons/icons.svg#left-arrow-cube"></use>
+									</svg><span>Назад</span></button>
+								<div class="cube__inner-content">
+									<div class="cube__slider swiper">
+										<div class="cube__wrapper swiper-wrapper">
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-html"></use>
+												</svg>
+												<div class="cube-slide__text">Уверенные знания HTML5 и
+													CSS3</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-sass"></use>
+												</svg>
+												<div class="cube-slide__text">Использование препроцессоров SASS/SCSS
+												</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-git"></use>
+												</svg>
+												<div class="cube-slide__text">Умение работать с системой
+													контроля
+													версий
+													Git</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-adaptive"></use>
+												</svg>
+												<div class="cube-slide__text">Адаптивная вёрстка</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-gulp"></use>
+												</svg>
+												<div class="cube-slide__text">Использование таск-менеджера
+													Gulp</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-bem"></use>
+												</svg>
+												<div class="cube-slide__text">Использование БЭМ-нейминга</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-figma"></use>
+												</svg>
+												<div class="cube-slide__text">Работа в Figma</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-pixel"></use>
+												</svg>
+												<div class="cube-slide__text">Умение верстать
+													PixelPerfect.</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-grid"></use>
+												</svg>
+												<div class="cube-slide__text">Использование Flexbox и
+													Grid.</div>
+											</div>
+											<div class="cube__slide swiper-slide">
+												<svg>
+													<use xlink:href="img/icons/icons.svg#cube-js"></use>
+												</svg>
+												<div class="cube-slide__text">Навыки работы с JS</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="cube__inner-item">
+								<button type="button" class="cube__btn"><svg>
+										<use xlink:href="img/icons/icons.svg#left-arrow-cube"></use>
+									</svg><span>Назад</span></button>
+								<div class="cube__inner-content cube__inner-content--swiper">
+
+									<div class="violet-works__swiper-wrapper">
+										<div class="violet-works__icon">
+											<img src="img/anim.webp" alt="icon">
+										</div>
+										<div class="violet-works__slider swiper">
+											<div class="violet-works__wrapper swiper-wrapper">
+
+												<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/technoserviceport/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/technoservis.webp">
+															<source media="(max-width: 600px)" srcset="img/technoservice-small.webp">
+															<img src="img/technoservis.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Многостраничник</span></div>
+													</a>
+												</div>
+												<div class="violet-works__slide swiper-slide">
+													<a href="https://denissaliukov.github.io/oknahaus/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/okna.webp">
+															<source media="(max-width: 600px)" srcset="img/okna-small.webp">
+															<img src="img/okna.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Лэндинг</span></div>
+													</a>
+												</div>
+												<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/tehnowood/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/tehnowood.webp">
+															<source media="(max-width: 600px)" srcset="img/mebel-small.webp">
+															<img src="img/tehnowood.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Многостраничник</span></div>
+													</a>
+												</div>
+												<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/zlatmax/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/zlatmax.webp">
+															<source media="(max-width: 600px)" srcset="img/zlatmax-small.webp">
+															<img src="img/zlatmax.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Интернет-магазин</span>
+														</div>
+													</a>
+												</div>
+												<div class="violet-works__slide swiper-slide"><a href="https://denissaliukov.github.io/audiomaster/" target="_blank">
+														<picture>
+															<source media="(min-width: 600px)" srcset="img/audiomaster.webp">
+															<source media="(max-width: 600px)" srcset="img/audio-small.webp">
+															<img src="img/audiomaster.webp" alt="image">
+														</picture>
+
+														<div class="works__label"><span>Интернет-магазин</span>
+														</div>
+													</a>
+												</div>
+											</div>
+										</div>
+									</div>
+
+
+
+
+								</div>
+							</li>
+							<li class="cube__inner-item">
+								<button type="button" class="cube__btn"><svg>
+										<use xlink:href="img/icons/icons.svg#left-arrow-cube"></use>
+									</svg><span>Назад</span></button>
+								<div class="cube__inner-content">
+									<div class="violet__text-inner">
+
+										<h2 class="violet__slogan">Связаться со мной можно любым, удобным для
+											Вас способом.
+										</h2>
+										<ul class="violet__contact-list">
+											<li class="violet__contact-item">
+												<img src="img/email.webp" alt="logo"><span data-ripple>denis_saliukov@yahoo.com</span>
+											</li>
+											<li class="violet__contact-item">
+												<a href="https://wa.me/79131688553"><img src="img/whatsapp.webp" alt="logo">WhatsApp</a>
+											</li>
+											<li class="violet__contact-item"><a href="https://t.me/DanPelikan"><img src="img/Telegram_Messenger.webp" alt="logo"><span>Telegram</span></a>
+											</li>
+											<li class="violet__contact-item">
+												<a href="https://vk.com/presque_vu_jd"><img src="img/vk.webp" alt="logo"><span>ВКонтакте</span></a>
+											</li>
+											<li class="violet__contact-item">
+												<a href="https://max.ru/u/f9LHodD0cOIRtHguZET3mZi6e-E0CVIQS2w5fxkjt8OWBF_hL1uCVoS95A0"><img src="img/Max_logo_2025.webp" alt="logo"><span>MAX</span></a>
+											</li>
+										</ul>
+
+									</div>
+								</div>
+							</li>
+						</ul>
+
+
+					</div>
+
+
+
+				</div>
+			</section>
 
 
 
@@ -643,7 +916,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20260104220949"></script>
+	<script src="js/app.min.js?_v=20260109070849"></script>
 	<div id="popup-violet" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
