--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
 
 									<div class="violet-works__swiper-wrapper">
 										<div class="violet-works__icon">
-											<img src="img/anim.webp" alt="icon">
+											<img src="img/anim.gif" alt="icon">
 										</div>
 										<div class="violet-works__slider swiper">
 											<div class="violet-works__wrapper swiper-wrapper">
