--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20260109070849">
+	<link rel="stylesheet" href="css/style.min.css?_v=20260109124651">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260109070849"></script> -->
-	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260109070849"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260109124651"></script> -->
+	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260109124651"></script> -->
 </head>
 
 <body style="display: none;">
@@ -73,9 +73,11 @@
 					h t m l > b o d y< s t r o n g { } p d i v / m a i n < a r t i c l e < & s p a n / s u m m a r y d e t a i l s </span>
 			</div>
 			<div class="top-block">
-				<video muted autoplay class="top-block__video">
+				<!-- <video muted autoplay class="top-block__video">
 					<source src="files/bg_video.mp4" type="video/mp4">
-				</video>
+				</video> -->
+
+				<img class="top-block__video" src="img/bg.gif" alt="gif">
 				<div class="top-block__btn-wrap">
 					<button type="button" class="top-block__btn"><span>Старт</span></button>
 				</div>
@@ -720,72 +722,92 @@
 									<div class="cube__slider swiper">
 										<div class="cube__wrapper swiper-wrapper">
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-html"></use>
-												</svg>
-												<div class="cube-slide__text">Уверенные знания HTML5 и
-													CSS3</div>
-											</div>
-											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-sass"></use>
-												</svg>
-												<div class="cube-slide__text">Использование препроцессоров SASS/SCSS
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-html"></use>
+													</svg>
+													<div class="cube-slide__text">Уверенные знания HTML5 и
+														CSS3</div>
 												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-git"></use>
-												</svg>
-												<div class="cube-slide__text">Умение работать с системой
-													контроля
-													версий
-													Git</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-sass"></use>
+													</svg>
+													<div class="cube-slide__text">Использование препроцессоров SASS/SCSS
+													</div>
+												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-adaptive"></use>
-												</svg>
-												<div class="cube-slide__text">Адаптивная вёрстка</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-git"></use>
+													</svg>
+													<div class="cube-slide__text">Умение работать с системой
+														контроля
+														версий
+														Git</div>
+												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-gulp"></use>
-												</svg>
-												<div class="cube-slide__text">Использование таск-менеджера
-													Gulp</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-adaptive"></use>
+													</svg>
+													<div class="cube-slide__text">Адаптивная вёрстка</div>
+												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-bem"></use>
-												</svg>
-												<div class="cube-slide__text">Использование БЭМ-нейминга</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-gulp"></use>
+													</svg>
+													<div class="cube-slide__text">Использование таск-менеджера
+														Gulp</div>
+												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-figma"></use>
-												</svg>
-												<div class="cube-slide__text">Работа в Figma</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-bem"></use>
+													</svg>
+													<div class="cube-slide__text">Использование БЭМ-нейминга</div>
+												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-pixel"></use>
-												</svg>
-												<div class="cube-slide__text">Умение верстать
-													PixelPerfect.</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-figma"></use>
+													</svg>
+													<div class="cube-slide__text">Работа в Figma</div>
+												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-grid"></use>
-												</svg>
-												<div class="cube-slide__text">Использование Flexbox и
-													Grid.</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-pixel"></use>
+													</svg>
+													<div class="cube-slide__text">Умение верстать
+														PixelPerfect.</div>
+												</div>
+
 											</div>
 											<div class="cube__slide swiper-slide">
-												<svg>
-													<use xlink:href="img/icons/icons.svg#cube-js"></use>
-												</svg>
-												<div class="cube-slide__text">Навыки работы с JS</div>
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-grid"></use>
+													</svg>
+													<div class="cube-slide__text">Использование Flexbox и
+														Grid.</div>
+												</div>
+
+											</div>
+											<div class="cube__slide swiper-slide">
+												<div class="cube__slide-content"><svg>
+														<use xlink:href="img/icons/icons.svg#cube-js"></use>
+													</svg>
+													<div class="cube-slide__text">Навыки работы с JS</div>
+												</div>
+
 											</div>
 										</div>
 									</div>
@@ -916,7 +938,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20260109070849"></script>
+	<script src="js/app.min.js?_v=20260109124651"></script>
 	<div id="popup-violet" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
@@ -981,6 +1003,42 @@
 
 								<div class="violet-popup-slide__img">
 									<img src="img/norilsk/8.webp" alt="image">
+								</div>
+							</div>
+							<div class="popup__slide swiper-slide violet-popup-slide">
+
+								<div class="violet-popup-slide__img">
+									<img src="img/norilsk/9.webp" alt="image">
+								</div>
+							</div>
+							<div class="popup__slide swiper-slide violet-popup-slide">
+
+								<div class="violet-popup-slide__img">
+									<img src="img/norilsk/10.webp" alt="image">
+								</div>
+							</div>
+							<div class="popup__slide swiper-slide violet-popup-slide">
+
+								<div class="violet-popup-slide__img">
+									<img src="img/norilsk/11.webp" alt="image">
+								</div>
+							</div>
+							<div class="popup__slide swiper-slide violet-popup-slide">
+
+								<div class="violet-popup-slide__img">
+									<img src="img/norilsk/12.webp" alt="image">
+								</div>
+							</div>
+							<div class="popup__slide swiper-slide violet-popup-slide">
+
+								<div class="violet-popup-slide__img">
+									<img src="img/norilsk/13.webp" alt="image">
+								</div>
+							</div>
+							<div class="popup__slide swiper-slide violet-popup-slide">
+
+								<div class="violet-popup-slide__img">
+									<img src="img/norilsk/14.webp" alt="image">
 								</div>
 							</div>
 						</div>
