--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20260110222612">
+	<link rel="stylesheet" href="css/style.min.css?_v=20260114222658">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260110222612"></script> -->
-	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260110222612"></script> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js?_v=20260114222658"></script> -->
+	<!-- <script src="js/files/jquery.rotating-slider.min.js?_v=20260114222658"></script> -->
 </head>
 
 <body style="display: none;">
@@ -928,6 +928,54 @@
 				</div>
 			</section>
 
+			<section class="section section--parallax">
+				<div class="parallax">
+					<div class="parallax__slider swiper">
+						<div class="parallax__wrapper swiper-wrapper">
+							<div class="parallax__slide swiper-slide">
+								<div class="parallax__slide-layer" data-swiper-parallax="35%" style="background-image: url('img/parallax/01-back.png');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="25%" style="background-image: url('img/parallax/01-middle.png');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="15%" style="background-image: url('img/parallax/01-front.png');">
+								</div>
+
+								<div class="parallax__content">
+
+								</div>
+							</div>
+							<div class="parallax__slide swiper-slide">
+								<div class="parallax__slide-layer" data-swiper-parallax="35%" style="background-image: url('img/parallax/02-back.png');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="25%" style="background-image: url('img/parallax/02-middle.png');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="15%" style="background-image: url('img/parallax/02-front.png');">
+								</div>
+							</div>
+							<div class="parallax__slide swiper-slide">
+								<div class="parallax__slide-layer" data-swiper-parallax="35%" style="background-image: url('img/parallax/03-back.jpg');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="27%" style="background-image: url('img/parallax/03-middle-back.png');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="20%" style="background-image: url('img/parallax/03-middle.png');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="15%" style="background-image: url('img/parallax/03-front.png');">
+								</div>
+							</div>
+							<div class="parallax__slide swiper-slide">
+								<div class="parallax__slide-layer" data-swiper-parallax="35%" style="background-image: url('img/parallax/04-back.jpg');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="25%" style="background-image: url('img/parallax/04-middle.png');">
+								</div>
+								<div class="parallax__slide-layer" data-swiper-parallax="15%" style="background-image: url('img/parallax/04-front.png');">
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</section>
+
 
 
 
@@ -938,7 +986,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20260110222612"></script>
+	<script src="js/app.min.js?_v=20260114222658"></script>
 	<div id="popup-violet" aria-hidden="true" class="popup">
 		<div class="popup__wrapper">
 			<div class="popup__content">
